test/fixedbugs/issue18459.golang
// errorcheck

// Copyright 2016 The Go Authors. All rights reserved.
// Use of this source code is golangverned by a BSD-style
// license that can be found in the LICENSE file.

// Verify that we have a line number for this error.

package main

//golang:nowritebarrier // ERROR "//golang:nowritebarrier only allowed in runtime"
func main() {
}
